--- a/details.html
+++ b/details.html
@@ -31,10 +31,10 @@
         </div>
     </main>
 
-     <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/details.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/details.js"></script>
     
 </body>
 </html>
