--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 
                </div>
             </div>
-    <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
